--- a/index.html
+++ b/index.html
@@ -685,7 +685,8 @@ _.fk("gb_Qf");
 </td>
 <td style="width:857px;height:80px"><span style="text-align:left;color:rgb(0,0,0)">
 	<font face="times new roman, serif" size="3">Cyclical Annealing Schedule: A Simple Approach to Mitigating KL Vanishing
-	[<a href="https://chunyuan.li/papers/naacl2019_cyclical.pdf" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://arxiv.org/abs/1903.10145" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/haofuml/cyclical_annealing" target="_blank" rel="nofollow">Code</a>]
 	<br>Hao Fu*,Chunyuan Li*, Xiaodong Liu, Jianfeng Gao, Asli Celikyilmaz, Lawrence Carin (* Equal contribution)<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<i>North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>)</i>, 2019.&nbsp; </span></font>
@@ -711,9 +712,6 @@ _.fk("gb_Qf");
 	<br>Chunyuan Li, Ke Bai, Jianqiao Li, Guoyin Wang, Changyou Chen, Lawrence Carin<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<i>Artificial Intelligence and Statistics (<b>AISTATS</b>)</i>, 2019.&nbsp; </span></font>
-	<br>
-	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
-	Learning to draw samples with adversarial training; The first algorithm for adversarial Soft Q-learning 
 	<br>
 	</font></font>
 
@@ -846,22 +844,30 @@ _.fk("gb_Qf");
 	<br><br>
 	<font face="times new roman, serif" size="3">Triangle Generative Adversarial Networks
 	[<a href="http://people.ee.duke.edu/~lcarin/TriangleGAN.pdf" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/LiqunChen0606/Triangle-GAN" target="_blank" rel="nofollow">Code</a>]
 	<br>Zhe Gan*, Liqun Chen*, Weiyao Wang, Yunchen Pu, Yizhe Zhang, Hao Liu, Chunyuan Li, Lawrence Carin<br></font>
 	<i style="font-size:medium;font-family:times new roman,serif;color:rgb(0,0,0)">Neural Information Processing Systems (<b>NIPS</b>)</i><font color="#000000" style="font-size:medium;font-family:times new roman,serif">, 2017</font>
 
 
 	<br>
 
-	<br style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">
-	<span style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">Learning Generic Sentence Representations using Convolutional Neural Networks [</span>
-	<a href="https://arxiv.org/abs/1611.07897" style="font-family:times new roman,serif;font-size:medium;text-align:left" target="_blank" rel="nofollow">arXiv</a>
-	<span style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">]</span><br style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left"><span style="text-align:left"><font color="#000000" face="times new roman, serif" size="3">Zhe Gan, Yunchen Pu, Ricardo Henao, Chunyuan Li, Xiaodong He, Lawrence Carin</font>
+	<br>
+	<font face="times new roman, serif" size="3">Learning Generic Sentence Representations using Convolutional Neural Networks
+	[<a href="https://arxiv.org/abs/1611.07897" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/zhegan27/ConvSent" target="_blank" rel="nofollow">Code</a>]
+	</font>
+	<br>
+	<font color="#000000" face="times new roman, serif" size="3">Zhe Gan, Yunchen Pu, Ricardo Henao, Chunyuan Li, Xiaodong He, Lawrence Carin</font>
 	<br><div style="text-align:left"><span style="text-align:justify;background-color:transparent"><font color="#000000" face="times new roman, serif" size="3"><i>Empirical Methods on Natural Language Processing (<b>EMNLP</b>)</i>, 2017 </font><font color="#ff9900" face="times new roman, serif" size="3">Oral&nbsp;</font></span>
 	<span style="text-align:justify;background-color:transparent"><font color="#ff9900" face="times new roman, serif" size="3">Presentation</font></span></div></span>&nbsp;
 
 
-
-	<br style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left"><span style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">Unsupervised Learning with Truncated Gaussian Graphical Models [</span><a href="http://people.ee.duke.edu/~lcarin/RTGGM_AAAI_v7.pdf" style="font-family:times new roman,serif;font-size:medium;text-align:left" target="_blank" rel="nofollow">PDF</a><span style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">] [</span><a href="https://arxiv.org/abs/1611.04920" style="font-family:times new roman,serif;font-size:medium;text-align:left" target="_blank" rel="nofollow">arXiv</a><span style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">]</span><br style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left"><span style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">Qinliang Su, Xuejun Liao, Chunyuan Li, Zhe Gan, Lawrence Carin</span><br style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left"><i><span style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">AAAI Conference of Artificial Intelligence (</span><b style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">AAAI</b></i><span style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left"><i>)</i>, 2017&nbsp;</span>
+	<br>
+	<font face="times new roman, serif" size="3">
+	Unsupervised Learning with Truncated Gaussian Graphical Models
+	[<a href="https://arxiv.org/abs/1611.04920" target="_blank" rel="nofollow">Paper</a>]
+	</font>	
+	<br style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left"><span style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">Qinliang Su, Xuejun Liao, Chunyuan Li, Zhe Gan, Lawrence Carin</span><br style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left"><i><span style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">AAAI Conference of Artificial Intelligence (</span><b style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left">AAAI</b></i><span style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left"><i>)</i>, 2017&nbsp;</span>
 	<font color="#ff9900" face="times new roman, serif" size="3">Oral&nbsp;</font><span style="font-size:13.3333px;background-color:transparent"><font color="#ff9900" face="times new roman, serif" size="3">Presentation</font></span>
 
 <br>
