blog & poster added

--- a/index.html
+++ b/index.html
@@ -687,6 +687,7 @@ _.fk("gb_Qf");
 	<font face="times new roman, serif" size="3">Cyclical Annealing Schedule: A Simple Approach to Mitigating KL Vanishing
 	[<a href="https://arxiv.org/abs/1903.10145" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/haofuml/cyclical_annealing" target="_blank" rel="nofollow">Code</a>]
+	[<a href="https://www.microsoft.com/en-us/research/blog/less-pain-more-gain-a-simple-method-for-vae-training-with-less-of-that-kl-vanishing-agony" target="_blank" rel="nofollow">MSR Blog</a>]
 	<br>Hao Fu*,Chunyuan Li*, Xiaodong Liu, Jianfeng Gao, Asli Celikyilmaz, Lawrence Carin (* Equal contribution)<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<i>North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>)</i>, 2019.&nbsp; </span></font>
@@ -709,6 +710,7 @@ _.fk("gb_Qf");
 	<font face="times new roman, serif" size="3">Adversarial Learning of a Sampler Based on an Unnormalized Distribution
 	[<a href="https://arxiv.org/abs/1901.00612" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/ChunyuanLI/RAS" target="_blank" rel="nofollow">Code</a>]
+	[<a href="http://chunyuan.li/papers/asitats_2019_poster_ras2.png" target="_blank" rel="nofollow">Poster</a>]
 	<br>Chunyuan Li, Ke Bai, Jianqiao Li, Guoyin Wang, Changyou Chen, Lawrence Carin<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<i>Artificial Intelligence and Statistics (<b>AISTATS</b>)</i>, 2019.&nbsp; </span></font>
@@ -827,7 +829,7 @@ _.fk("gb_Qf");
 <td style="width:857px;height:90px"><span style="text-align:left;color:rgb(0,0,0)">
 
 
-	<font face="times new roman, serif" size="3"><font color="#000000">Scalable Bayesian Learning of Recurrent Neural Networks for Language Modeling</font> [<a href="https://arxiv.org/abs/1611.08034" style="text-align:left" target="_blank" rel="nofollow">arXiv</a><span style="color:rgb(0,0,0);text-align:left">] [<a href="https://github.com/zhegan27/Bayesian_RNN" target="_blank" rel="nofollow">Code</a>] [<a href="https://www.dropbox.com/s/a7aqjz5cd1vj8dp/slides_bayes_rnn.pdf?dl=0" target="_blank" rel="nofollow">Slides</a>]</span></font><br style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left"><span style="text-align:left"><font color="#000000" face="times new roman, serif" size="3">Zhe Gan*, Chunyuan Li*, Changyou Chen, Yunchen Pu, Qinliang Su, Lawrence Carin</font><br><div style="text-align:left"><span style="text-align:justify;background-color:transparent"><font color="#000000" face="times new roman, serif" size="3"><i>Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</i>, 2017&nbsp;</font></span><span style="text-align:justify;background-color:transparent"><font color="#ff9900" face="times new roman, serif" size="3">Oral Presentation</font></span></div></span>
+	<font face="times new roman, serif" size="3"><font color="#000000">Scalable Bayesian Learning of Recurrent Neural Networks for Language Modeling</font> [<a href="https://arxiv.org/abs/1611.08034" style="text-align:left" target="_blank" rel="nofollow">arXiv</a><span style="color:rgb(0,0,0);text-align:left">] [<a href="https://github.com/zhegan27/Bayesian_RNN" target="_blank" rel="nofollow">Code</a>] [<a href="https://www.dropbox.com/s/a7aqjz5cd1vj8dp/slides_bayes_rnn.pdf?dl=0" target="_blank" rel="nofollow">Slides</a>]</span></font><br style="color:rgb(0,0,0);font-family:times new roman,serif;font-size:medium;text-align:left"><span style="text-align:left"><font color="#000000" face="times new roman, serif" size="3">Zhe Gan*, Chunyuan Li*, Changyou Chen, Yunchen Pu, Qinliang Su, Lawrence Carin (* Equal contribution)</font><br><div style="text-align:left"><span style="text-align:justify;background-color:transparent"><font color="#000000" face="times new roman, serif" size="3"><i>Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</i>, 2017&nbsp;</font></span><span style="text-align:justify;background-color:transparent"><font color="#ff9900" face="times new roman, serif" size="3">Oral Presentation</font></span></div></span>
 	
 	<br>
 	<font face="times new roman, serif" size="3">VAE Learning via Stein Variational Gradient Descent
