--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ _.fk("gb_Qf");
 <tr>
 <td style="width:19px;height:24px"></td><td style="width:967px;height:24px"><font size="3">
 <span style="line-height:19px">[Email:</span></font>&nbsp;<span style="background-color:transparent;line-height:19px"><a href="mailto:cl319@duke.edu" style="font-size:medium">chunyuan.li@hotmail.com</a><font size="3">]</font>&nbsp;</span><font size="3" style="background-color:transparent"><span style="line-height:19px">[&nbsp;</span></font><span style="background-color:transparent;font-size:10pt;line-height:19px"><font size="3"><a href="https://github.com/ChunyuanLI" target="_blank" rel="nofollow">GitHub</a>&nbsp;] [&nbsp;</font></span><a href="https://scholar.google.com/citations?user=Zd7WmXUAAAAJ&amp;hl=en" style="background-color:transparent;font-size:medium;line-height:19px" target="_blank">Google Scholar</a><span style="background-color:transparent;font-size:10pt">&nbsp;</span><span style="background-color:transparent;font-size:medium;line-height:19px">] [<a href="https://www.linkedin.com/in/chunyuan-li-039b6a44/" target="_blank" rel="nofollow">Linkedin</a>] [<a href="http://chunyuan.li/CV_ChunyuanLi.pdf" target="_blank" rel="nofollow">CV</a>]
-<a href="http://chunyuan.li/doc/dissertation_cli.pdf" target="_blank" rel="nofollow">[Dissertation]</a> 
+<a href="https://dukespace.lib.duke.edu/dspace/handle/10161/18207" target="_blank" rel="nofollow">[Dissertation]</a> 
 </span>
 <center style="text-align:left;color:rgb(68,68,68);line-height:15px;font-family:Arial,Verdana,sans-serif"></center>
 </td>
@@ -710,7 +710,7 @@ _.fk("gb_Qf");
 	<font face="times new roman, serif" size="3">Adversarial Learning of a Sampler Based on an Unnormalized Distribution
 	[<a href="https://arxiv.org/abs/1901.00612" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/ChunyuanLI/RAS" target="_blank" rel="nofollow">Code</a>]
-	[<a href="http://chunyuan.li/papers/asitats_2019_poster_ras2.png" target="_blank" rel="nofollow">Poster</a>]
+	[<a href="http://chunyuan.li/papers/asitats_2019_poster_ras2.jpg" target="_blank" rel="nofollow">Poster</a>]
 	<br>Chunyuan Li, Ke Bai, Jianqiao Li, Guoyin Wang, Changyou Chen, Lawrence Carin<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<i>Artificial Intelligence and Statistics (<b>AISTATS</b>)</i>, 2019.&nbsp; </span></font>
