--- a/index.html
+++ b/index.html
@@ -674,6 +674,64 @@ _.fk("gb_Qf");
 </tbody>
 </table>
 
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td valign=“middle” style="width:225px;height:60px">
+</td>
+<td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Twin Auxiliary Classifiers GAN
+	[<a href="https://arxiv.org/abs/1907.02690" target="_blank" rel="nofollow">Paper</a>]
+	<br>Mingming Gong, Yanwu Xu, Chunyuan Li, Kun Zhang, Kayhan Batmanghelich</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Neural Information Processing Systems (<b>NIPS</b>)</i>, 2019. &nbsp;
+	<font color="#ff9900" face="times new roman, serif" size="3">Spotlight Presentation <br> <br></font>
+	 </span></font>
+</td>
+</tr>
+</tbody>
+</table>
+
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td valign=“middle” style="width:225px;height:60px">
+</td>
+<td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Implicit Deep Latent Variable Models for Text Generation
+	[<a href="https://arxiv.org/pdf/1908.11527v1.pdf" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/fangleai/Implicit-LVM" target="_blank" rel="nofollow">Code</a>]
+	<br>Le Fang, Chunyuan Li, Jianfeng Gao, Wen Dong, Changyou Chen</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Empirical Methods in Natural Language Processing(<b>EMNLP</b>)</i>, 2019. <br>&nbsp; </span></font>
+</td>
+</tr>
+</tbody>
+</table>
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td valign=“middle” style="width:225px;height:60px">
+</td>
+<td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Efficient Navigation with Language Pre-training and Stochastic Sampling
+	[<a href="https://chunyuan.li/papers/EMNLP_2019_VLN.pdf" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/xjli/r2r_vln" target="_blank" rel="nofollow">Code</a>]
+	<br>Xiujun Li, Chunyuan Li, Qiaolin Xia, Yonatan Bisk, Asli Celikyilmaz, Jianfeng Gao, Noah A. Smith, Yejin Choi</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Empirical Methods in Natural Language Processing(<b>EMNLP</b>)</i>, 2019. <br>&nbsp; </span></font>
+</td>
+</tr>
+</tbody>
+</table>
+
 
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
 <tbody>
@@ -681,8 +739,8 @@ _.fk("gb_Qf");
 <td style="width:17px;height:80px">&nbsp;</td>
 <td valign=“middle” style="width:225px;height:80px">
 <img border="0" height="70" width="140" src="./logo/two_paths_vae_atg.png" style="background-color:transparent">
-
 </td>
+
 <td style="width:857px;height:80px"><span style="text-align:left;color:rgb(0,0,0)">
 	<font face="times new roman, serif" size="3">Cyclical Annealing Schedule: A Simple Approach to Mitigating KL Vanishing
 	[<a href="https://arxiv.org/abs/1903.10145" target="_blank" rel="nofollow">Paper</a>]
@@ -690,7 +748,8 @@ _.fk("gb_Qf");
 	[<a href="https://www.microsoft.com/en-us/research/blog/less-pain-more-gain-a-simple-method-for-vae-training-with-less-of-that-kl-vanishing-agony" target="_blank" rel="nofollow">MSR Blog</a>]
 	<br>Hao Fu*,Chunyuan Li*, Xiaodong Liu, Jianfeng Gao, Asli Celikyilmaz, Lawrence Carin (* Equal contribution)<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
-	<i>North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>)</i>, 2019.&nbsp; </span></font>
+	<i>North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>)</i>, 2019.&nbsp;
+	<font color="#ff9900" face="times new roman, serif" size="3">Oral Presentation</font> </span></font>
 	</font></font>
 </td>
 </tr>
