--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ _.fk("gb_Qf");
 <tbody style="line-height:110%">
 <tr>
 <td style="width:19px;height:21px"><font size="3">&nbsp;</font></td>
-<td style="width:967px;height:21px"><font size="3">I am a researcher at Microsoft Research, Redmond. I finished my PhD in macine learning at Duke University, <font size="3" style="line-height:110%;background-color:transparent">advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font><span style="line-height:110%;font-size:10pt;background-color:transparent">.&nbsp;</span></td>
+<td style="width:967px;height:21px"><font size="3">I am a senior researcher at Microsoft Research, Redmond. I finished my PhD in macine learning at Duke University, <font size="3" style="line-height:110%;background-color:transparent">advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font><span style="line-height:110%;font-size:10pt;background-color:transparent">.&nbsp;</span></td>
 <td style="width:63px;height:21px"><font size="3">&nbsp;</font></td>
 </tr>
 <tr>
@@ -586,7 +586,7 @@ _.fk("gb_Qf");
 </span>
 <div><font color="#bf9000" face="times new roman, serif" size="5">&nbsp; &nbsp; Recent papers</font></div>
 <div>
-<ul style="text-align:justify"><li><font face="times new roman, serif" size="4"><span style="line-height:21.6000003814697px"><b>Scalable Bayesian Methods and Deep Learning</b></span></font></li></ul>
+<ul style="text-align:justify"><li><font face="times new roman, serif" size="4"><span style="line-height:21.6000003814697px"><b>Deep Learning</b></span></font></li></ul>
 
 
 
@@ -668,7 +668,10 @@ _.fk("gb_Qf");
 	<font face="times new roman, serif" size="3">Cyclical Stochastic Gradient MCMC for Bayesian Deep Learning
 	[<a href="https://arxiv.org/pdf/1902.03932.pdf" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/ruqizhang/csgmcmc" target="_blank" rel="nofollow">Code</a>]
-	<br>Ruqi Zhang, Chunyuan Li, Jianyi Zhang, Changyou Chen, Andrew Gordon Wilson</font>
+	<br>Ruqi Zhang, Chunyuan Li, Jianyi Zhang, Changyou Chen, Andrew Gordon Wilson</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2020. &nbsp;
+	<font color="#ff9900" face="times new roman, serif" size="3">Oral Presentation <br> <br></font>
 </td>
 </tr>
 </tbody>
@@ -681,11 +684,49 @@ _.fk("gb_Qf");
 <td valign=“middle” style="width:225px;height:60px">
 </td>
 <td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">RaCT: Towards Amortized Ranking-Critical Training for Collaborative Filtering
+	[<a href="https://arxiv.org/abs/1906.04281" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/samlobel/RaCT_CF" target="_blank" rel="nofollow">Code</a>]
+	<br>Sam Lobel*, Chunyuan Li*, Jianfeng Gao, Lawrence Carin (* Equal contribution)</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2020. &nbsp; &nbsp;<br> <br> </font>
+</td>
+</tr>
+</tbody>
+</table>
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td valign=“middle” style="width:225px;height:60px">
+</td>
+<td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Complementary Auxiliary Classifiers for Label-Conditional Text Generation 
+	[<a href="http://people.ee.duke.edu/~lcarin/AAAI_LiY_6828.pdf" target="_blank" rel="nofollow">Paper</a>]
+	<br>Y. Li, C. Li, Y. Zhang, X. Li, G. Zheng, L. Carin and J. Gao</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2020 <br> <br> </font>
+</td>
+</tr>
+</tbody>
+</table>
+
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td valign=“middle” style="width:225px;height:60px">
+</td>
+<td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
 	<font face="times new roman, serif" size="3">Twin Auxiliary Classifiers GAN
 	[<a href="https://arxiv.org/abs/1907.02690" target="_blank" rel="nofollow">Paper</a>]
 	<br>Mingming Gong, Yanwu Xu, Chunyuan Li, Kun Zhang, Kayhan Batmanghelich</font><br>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
-	<i>Neural Information Processing Systems (<b>NIPS</b>)</i>, 2019. &nbsp;
+	<i>Neural Information Processing Systems (<b>NeurIPS</b>)</i>, 2019. &nbsp;
 	<font color="#ff9900" face="times new roman, serif" size="3">Spotlight Presentation <br> <br></font>
 	 </span></font>
 </td>
