four papers added

--- a/index.html
+++ b/index.html
@@ -630,12 +630,11 @@ _.fk("gb_Qf");
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
 <tbody>
 <tr>
-<td style="width:17px;height:90px">&nbsp;</td>
-<td valign=“middle” style="width:225px;height:90px">
+<td style="width:17px;height:80px">&nbsp;</td>
+<td valign=“middle” style="width:225px;height:80px">
 <img border="0" height="80" src="./cli_page_files/d_int_iclr.png" style="background-color:transparent;line-height:1.0" width="200">
-
 </td>
-<td style="width:857px;height:90px"><span style="text-align:left;color:rgb(0,0,0)">
+<td style="width:857px;height:80px"><span style="text-align:left;color:rgb(0,0,0)">
 	<font face="times new roman, serif" size="3">Measuring the Intrinsic Dimension of Objective Landscapes
 	[<a href="https://arxiv.org/abs/1804.08838" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://eng.uber.com/intrinsic-dimension/" target="_blank" rel="nofollow">Blog</a>]
@@ -649,13 +648,114 @@ _.fk("gb_Qf");
 	<br>
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
 	Training neural nets in a random subspace to find the minimum number of trainable parameters for a solution
-	<br>
 	</font></font>
 
 </td>
 </tr>
 </tbody>
 </table>
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td style="width:225px;height:70px">
+<div style="display:block;text-align:left"><br></div>
+<img border="0" height="75" src="./logo/headfig_optimus.png" width="200"></div>
+</div>
+</td>
+
+<td style="width:857px;height:40px"><span style="text-align:left;color:rgb(0,0,0)">
+	<br><br>
+	<font face="times new roman, serif" size="3">Optimus: Organizing Sentences via Pre-trained Modeling of a Latent Space
+	[<a href="http://chunyuan.li/papers/Optimus_2020.pdf" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/ChunyuanLI/Optimus" target="_blank" rel="nofollow">Code</a>]
+	<br>Chunyuan Li, Xiang Gao, Yuan Li, Xiujun Li, Baolin Peng, Yizhe Zhang, Jianfeng Gao</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
+	The first BIG VAE language model, as an illustration of pre-training a compact latent space at scale
+	<br>
+	</font>
+</td>
+</tr>
+</tbody>
+</table>
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td style="width:225px;height:70px">
+<div style="display:block;text-align:left"><br></div>
+<img border="0" height="55" src="./logo/FQ_GAN_architecture.png" width="200"></div>
+</div>
+</td>
+<td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<br>
+	<font face="times new roman, serif" size="3">Feature Quantization Improves GAN Training
+	[<a href="https://arxiv.org/abs/2004.02088" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/YangNaruto/FQ-GAN" target="_blank" rel="nofollow">Code</a>]
+	<br>Yang Zhao*, Chunyuan Li*, Ping Yu, Jianfeng Gao, Changyou Chen (* Equal contribution)</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
+	A simple plug-in to improve BigGAN, StyleGAN, and U-GAT-IT for large-scale image generation/translation
+	<br>
+	</font>		
+</td>
+</tr>
+</tbody>
+</table>
+
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td style="width:225px;height:60px">
+<div style="display:block;text-align:left"><br></div>
+<img border="0" height="60" src="./logo/vln_pretrain_finetune.png" width="120"></div>
+</div>
+</td>
+<td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<br>
+	<font face="times new roman, serif" size="3">Towards Learning a Generic Agent for Vision-and-Language Navigation via Pre-training
+	[<a href="https://arxiv.org/abs/2002.10638" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/weituo12321/PREVALENT" target="_blank" rel="nofollow">Code</a>]
+	<br>Weituo Hao*, Chunyuan Li*, Xiujun Li, Lawrence Carin, Jianfeng Gao (* Equal contribution)</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2020. <br></span></font>	
+	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
+	The first generic agent for navigation tasks, pre-trained with synthesized samples of a generative model
+	<br><br>
+	</font>				
+</td>
+</tr>
+</tbody>
+</table>
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td valign=“middle” style="width:225px;height:60px">
+</td>
+<td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Few-shot Natural Language Generation for Task-Oriented Dialog
+	[<a href="https://arxiv.org/abs/2002.12328" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/pengbaolin/SC-GPT" target="_blank" rel="nofollow">Code</a>]
+	[<a href="http://52.137.109.64:8890/" target="_blank" rel="nofollow">Project</a>]
+	[<a href="https://aka.ms/scgpt" target="_blank" rel="nofollow">Demo</a>]
+	<br>Baolin Peng, Chenguang Zhu, Chunyuan Li, Xiujun Li, Jinchao Li, Michael Zeng, Jianfeng Gao</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+</td>
+</tr>
+</tbody>
+</table>
+
 
 
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
@@ -713,6 +813,23 @@ _.fk("gb_Qf");
 </tbody>
 </table>
 
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td valign=“middle” style="width:225px;height:60px">
+</td>
+<td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Survival Cluster Analysis
+	[<a href="https://arxiv.org/abs/2003.00355" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/paidamoyo/survival_cluster_analysis" target="_blank" rel="nofollow">Code</a>]
+	<br>Paidamoyo Chapfuwa, Chunyuan Li, Nikhil Mehta, Lawrence Carin, Ricardo Henao</font><br>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>ACM Conference on Health, Inference, and Learning (<b>ACM CHIL</b>)</i>, 2020 <br> <br> </font>
+</td>
+</tr>
+</tbody>
+</table>
 
 
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
