--- a/index.html
+++ b/index.html
@@ -556,13 +556,18 @@ _.fk("gb_Qf");
 <center style="text-align:left;color:black;font-family:Georgia"><span style="line-height:51px;font-family:times new roman,serif">
 <table border="0" bordercolor="#888" cellspacing="0">
 <tbody style="line-height:110%">
-<tr>
-<td style="width:19px;height:21px"><font size="3">&nbsp;</font></td>
-<td style="width:967px;height:21px"><font size="3">I am a senior researcher at Microsoft Research, Redmond. I finished my PhD in macine learning at Duke University, <font size="3" style="line-height:110%;background-color:transparent">advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font><span style="line-height:110%;font-size:10pt;background-color:transparent">.&nbsp;</span></td>
-<td style="width:63px;height:21px"><font size="3">&nbsp;</font></td>
+
+<td style="width:19px;height:70px"><br></td><td style="width:967px;height:70px"><font size="3"><span style="line-height:19.2px">
+I am a senior researcher at Microsoft Research, Redmond. 
+My recent research focuses on exploring and practicing the connections between deep generative models and self-supervised pre-training using large-scale datasets and training, with applications to natural language modeling, image generation, vision-and-language tasks and dialogue systems. For an overview, please check the
+	<font size="3"><a href="http://chunyuan.li/doc/Scaling_DGMs_chunyl" target="_blank" rel="nofollow">slides</a></font>. 
+</td>
 </tr>
+
 <tr>
-<td style="width:19px;height:100px"><br></td><td style="width:967px;height:100px"><font size="3"><span style="line-height:19.2px"><br>My PhD research interests focus on the <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="nofollow">intersection of deep learning and Bayesian statistics</a> 
+<td style="width:19px;height:100px"><br></td><td style="width:967px;height:100px">
+<font size="3" style="line-height:110%;background-color:transparent">I completed my PhD in macine learning at Duke University, advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font>
+<font size="3"><span style="line-height:19.2px">. My PhD research studied the <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="nofollow">intersection of deep learning and Bayesian statistics</a> 
 --- enriching one with each other: 
 <br>(1) <b>Bayesian Deep Learning</b>: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs <br>(2) <b>Deep Bayesian Learning</b>: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. <br>These tools have been applied to various domains, including computer vision, natural language processing and deep reinforcement learning <i>etc</i>.
 </span></font>
