--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ _.fk("gb_Qf");
 <td style="width:19px;height:70px"><br></td><td style="width:967px;height:70px"><font size="3"><span style="line-height:19.2px">
 I am a senior researcher at Microsoft Research, Redmond. 
 My recent research focuses on exploring and practicing the connections between deep generative models and self-supervised pre-training using large-scale datasets and training, with applications to natural language modeling, image generation, vision-and-language tasks and dialogue systems. For an overview, please check the
-	<font size="3"><a href="http://chunyuan.li/doc/Scaling_DGMs_chunyl" target="_blank" rel="nofollow">slides</a></font>. 
+	<font size="3"><a href="http://chunyuan.li/doc/Scaling_DGMs_chunyl.pdf" target="_blank" rel="nofollow">slides</a></font>. 
 </td>
 </tr>
 
