--- a/index.html
+++ b/index.html
@@ -559,8 +559,13 @@ _.fk("gb_Qf");
 
 <td style="width:19px;height:70px"><br></td><td style="width:967px;height:70px"><font size="3"><span style="line-height:19.2px">
 I am a senior researcher at Microsoft Research, Redmond. 
-My recent research focuses on exploring and practicing the connections between deep generative models and self-supervised pre-training using large-scale datasets and training, with applications to natural language modeling, image generation, vision-and-language tasks and dialogue systems. For an overview, please check the
-	<font size="3"><a href="http://chunyuan.li/doc/Scaling_DGMs_chunyl.pdf" target="_blank" rel="nofollow">slides</a></font>. 
+My recent research focuses on exploring and practicing the connections between deep generative models and self-supervised pre-training using large-scale datasets and training, with applications to natural language modeling, image generation and vision-and-language tasks. For an overview, please check the
+	<font size="3"><a href="http://chunyuan.li/doc/Scaling_DGMs_chunyl.pdf" target="_blank" rel="nofollow">slides</a></font>
+	and blogs (in 
+	<font size="3"><a href="https://www.microsoft.com/en-us/research/blog/a-deep-generative-model-trifecta-three-advances-that-work-towards-harnessing-large-scale-power/" target="_blank" rel="nofollow">English</a></font>
+	and 
+	<font size="3"><a href="https://zhuanlan.zhihu.com/p/122250953" target="_blank" rel="nofollow">Chinese</a></font>
+	). 
 </td>
 </tr>
 
@@ -720,7 +725,7 @@ My recent research focuses on exploring and practicing the connections between d
 <td style="width:25px;height:60px">&nbsp;</td>
 <td style="width:225px;height:60px">
 <div style="display:block;text-align:left"><br></div>
-<img border="0" height="60" src="./logo/vln_pretrain_finetune.png" width="120"></div>
+<img border="0" height="70" src="./logo/vln2.jpg" width="200"></div>
 </div>
 </td>
 <td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
@@ -733,6 +738,29 @@ My recent research focuses on exploring and practicing the connections between d
 	<i>Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2020. <br></span></font>	
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
 	The first generic agent for navigation tasks, pre-trained with synthesized samples of a generative model
+	<br>
+	</font>				
+</td>
+</tr>
+</tbody>
+</table>
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td style="width:215px;height:60px">
+<div style="display:block;text-align:left"><br></div>
+<img border="0" height="75" src="./logo/Oscar_scheme.png" width="190"></div>
+</div>
+</td>
+<td style="width:710px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<br>
+	<font face="times new roman, serif" size="3">Oscar: Object-Semantics Aligned Pre-training for Vision-Language Tasks
+	[<a href="https://arxiv.org/abs/2004.06165" target="_blank" rel="nofollow">Paper</a>]
+	<br>Xiujun Li, Xi Yin, Chunyuan Li, Xiaowei Hu, Pengchuan Zhang, Lei Zhang, Lijuan Wang, Houdong Hu, Li Dong, Furu Wei, Yejin Choi, Jianfeng Gao</font><br>	
+	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
+	Ojbects as anchor points to align image-text, creating new SoTA on six vision-and-language tasks.
 	<br><br>
 	</font>				
 </td>
@@ -744,17 +772,20 @@ My recent research focuses on exploring and practicing the connections between d
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
 <tbody>
 <tr>
-<td style="width:25px;height:60px">&nbsp;</td>
-<td valign=“middle” style="width:225px;height:60px">
+<td style="width:25px;height:50px">&nbsp;</td>
+<td style="width:215px;height:50px">
+<div style="display:block;text-align:left"></div>
+<img border="0" height="50" src="./logo/dialog_architecture.png" width="180"></div>
+</div>
 </td>
-<td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+<td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
 	<font face="times new roman, serif" size="3">Few-shot Natural Language Generation for Task-Oriented Dialog
 	[<a href="https://arxiv.org/abs/2002.12328" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/pengbaolin/SC-GPT" target="_blank" rel="nofollow">Code</a>]
 	[<a href="http://52.137.109.64:8890/" target="_blank" rel="nofollow">Project</a>]
 	[<a href="https://aka.ms/scgpt" target="_blank" rel="nofollow">Demo</a>]
-	<br>Baolin Peng, Chenguang Zhu, Chunyuan Li, Xiujun Li, Jinchao Li, Michael Zeng, Jianfeng Gao</font><br>
-	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<br>Baolin Peng, Chenguang Zhu, Chunyuan Li, Xiujun Li, Jinchao Li, Michael Zeng, Jianfeng Gao</font>
+	<br> <br>
 </td>
 </tr>
 </tbody>
