--- a/index.html
+++ b/index.html
@@ -748,19 +748,20 @@ My recent research focuses on exploring and practicing the connections between d
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
 <tbody>
 <tr>
-<td style="width:25px;height:60px">&nbsp;</td>
-<td style="width:215px;height:60px">
+<td style="width:25px;height:40px">&nbsp;</td>
+<td style="width:215px;height:40px">
 <div style="display:block;text-align:left"><br></div>
-<img border="0" height="75" src="./logo/Oscar_scheme.png" width="190"></div>
+<img border="0" height="50" src="./logo/Oscar_scheme.png" width="190"></div>
 </div>
 </td>
 <td style="width:710px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
 	<br>
 	<font face="times new roman, serif" size="3">Oscar: Object-Semantics Aligned Pre-training for Vision-Language Tasks
 	[<a href="https://arxiv.org/abs/2004.06165" target="_blank" rel="nofollow">Paper</a>]
-	<br>Xiujun Li, Xi Yin, Chunyuan Li, Xiaowei Hu, Pengchuan Zhang, Lei Zhang, Lijuan Wang, Houdong Hu, Li Dong, Furu Wei, Yejin Choi, Jianfeng Gao</font><br>	
+	[<a href="https://github.com/microsoft/Oscar" target="_blank" rel="nofollow">Code</a>]
+	<br>Xiujun Li, Xi Yin, Chunyuan Li, Pengchuan Zhang, Xiaowei Hu, Lei Zhang, Lijuan Wang, Houdong Hu, Li Dong, Furu Wei, Yejin Choi, Jianfeng Gao</font><br>	
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
-	Ojbects as anchor points to align image-text, creating new SoTA on six vision-and-language tasks.
+	Objects as anchor points to align image-text, creating new SoTA on six vision-and-language tasks.
 	<br><br>
 	</font>				
 </td>
@@ -791,6 +792,28 @@ My recent research focuses on exploring and practicing the connections between d
 </tbody>
 </table>
 
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:50px">&nbsp;</td>
+<td style="width:225px;height:50px">
+</td>
+<td style="width:857px;height:50px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Soloist: Few-shot Task-Oriented Dialog with A Single Pre-trained Auto-regressive Model
+	[<a href="https://arxiv.org/abs/2005.05298" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="http://soloist.westus2.azurecontainer.io/" target="_blank" rel="nofollow">Project</a>]
+	<br>Baolin Peng, Chunyuan Li, Jinchao Li, Shahin Shayandeh, Lars Liden, Jianfeng Gao</font>
+	<br>
+	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
+	A new and simplified paradigm shift for task-oritend dialogs: grounded pre-training + few-shot fine-tuning  
+	<br><br>
+	</font>	
+</td>
+</tr>
+</tbody>
+</table>
+
+
 
 
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
@@ -803,6 +826,7 @@ My recent research focuses on exploring and practicing the connections between d
 	<font face="times new roman, serif" size="3">Cyclical Stochastic Gradient MCMC for Bayesian Deep Learning
 	[<a href="https://arxiv.org/pdf/1902.03932.pdf" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/ruqizhang/csgmcmc" target="_blank" rel="nofollow">Code</a>]
+	[<a href="https://iclr.cc/virtual_2020/poster_rkeS1RVtPS.html" target="_blank" rel="nofollow">Video</a>]
 	<br>Ruqi Zhang, Chunyuan Li, Jianyi Zhang, Changyou Chen, Andrew Gordon Wilson</font><br>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2020. &nbsp;
@@ -822,6 +846,7 @@ My recent research focuses on exploring and practicing the connections between d
 	<font face="times new roman, serif" size="3">RaCT: Towards Amortized Ranking-Critical Training for Collaborative Filtering
 	[<a href="https://arxiv.org/abs/1906.04281" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/samlobel/RaCT_CF" target="_blank" rel="nofollow">Code</a>]
+	[<a href="https://iclr.cc/virtual_2020/poster_HJxR7R4FvS.html" target="_blank" rel="nofollow">Video</a>]
 	<br>Sam Lobel*, Chunyuan Li*, Jianfeng Gao, Lawrence Carin (* Equal contribution)</font><br>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2020. &nbsp; &nbsp;<br> <br> </font>
